<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VAMU Notifier</string>
    <string name="alert_details">Alert Details</string>
    <string name="report_details">Report Details</string>
    <string name="job_description_label">Job Description</string>
    <string name="last_completed_label">Last Completed:</string>
    <string name="elapsed_time_label">Elapsed Time:</string>
    <string name="menu_preferences_item">Preferences</string>
    <string name="service_active_string">Stop Service</string>
    <string name="service_inactive_string">Start Service</string>
    <string name="service_graceful_death">Normal</string> 
    <string name="green_elapsed_time">Green for: </string> 
    <string name="red_elapsed_time">Red for: </string> 
    <string name="notification_reds_plural">active alerts!</string> 
    <string name="notification_reds_singular">1 active alert!</string> 
    <string name="notification_cleared_plural">alerts have cleared!</string> 
    <string name="notification_cleared_singular">1 alert has cleared!</string> 
    <string name="notification_all_clear">All alerts are clear!</string> 
    <string name="gray_elapsed_time">Unknown state </string> 
    <string name="null_short_description">Short description not set in VAMU</string> 
    <string name="shamu_widget_name">VAMU Notifier</string> 
    <string name="text_view_widget_string">VAMU</string> 
    <string name="configuration_title">Configuration</string>
    <string name="preferences_url">VAMU\'s URL?</string>
    <string name="configuration_url_default"></string>
    <string name="configuration_polling_interval">Polling interval:</string>
    <string name="configuration_test_button">Fetch alerts!</string>
    <string name="configuration_interesting_alert_note">Select all alerts of interest:</string>
    <string name="configuration_url_preamble">http://</string>
    <string name="configuration_default_polling_interval">10</string>
    <string name="configuration_invalid_url_dialogue_please_fix">"Your URL is invalid.  Please fix it!"</string>
    <string name="configuration_invalid_url_dialogue_title">Malformed URL!</string>
    <string name="configuration_no_active_network_dialogue">"Your device has no network connectivity at the moment!"</string>
    <string name="configuration_no_active_network_title">"No connectivity"</string>
    <string name="configuration_shamu_unreachable_message">"VAMU was not reachable with your URL!  Is VAMU up?"</string>
    <string name="configuration_shamu_unreachable_title">VAMU unreachable!</string>
    <string name="configuration_invalid_url_dialogue_ok">OK</string>
    <string name="configuration_testing_button_in_test">Fetching...</string>
    <string name="configuration_success_test_message">Select the alerts of interest and select the back button when finished!</string>
    <string name="configuration_success_test_title">Success!!</string>
    <string name="welcome_title">Welcome!</string> 
    <string name="welcome_message">Welcome to the Android System Health Alert Monitoring (VAMU) notification app!\nThis app will help you keep up with current health of the VA\'s VLER system.\nTo get started enter the URL for the VAMU system and your desired polling interval in minutes.</string>
    <string name="main_activity_failed_refresh_message">Refresh failed!  Is VAMU up?</string>
    <string name="main_activity_failed_refresh_title">Refresh Failed!</string>
    <string name="preferences_deselect_all_button_text">None</string>
    <string name="preferences_select_all_button_text">All</string>
    <string name="speak_red">The :ALERT: is active!</string>
    <string name="speak_green">The :ALERT: has cleared!</string>
    <string name="hello_settings_fragment">Hello settings fragment</string>
    <!-- The string array "nav_drawer_array" must be kept in sync with the constants beginning "POSITION_" in ShamuMainActivity.java -->
    <string-array name="nav_drawer_array">
        <!-- All corresponding png files must be named drawer_#{item_name}, for example, "drawer_alerts.png".  Note everything is lowercase. -->
        <item>Alerts</item>
        <item>Reports</item>
        <item>Configure</item>
        <item>Settings</item>
        <item>Charts</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings_vibrate_checkbox">Vibrate on Alert</string>
    <string name="settings_audible_checkbox">Audible Notifications on Alert</string>
    <string name="settings_announce_checkbox">Announce Alert via Voice</string>
    <string name="title_settings">Settings</string>
    <string name="title_reports">Reports</string>
    <string name="title_configure">Configure</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_real_time">Chart</string>
    <string name="widget_cbx_silent_polling">Silent Polling</string>
    <string name="drawer_currently_refreshing_message">The current refresh must complete first!</string>
    <string name="drawer_currently_refreshing_title">Refreshing!</string>
    <string name="reports_empty_listview_title">No Reports!</string>
    <string name="reports_empty_listview_message">No reports are available for viewing.  Try doing a pull to refresh.</string>
    <string name="alerts_empty_list_title">No Alerts!</string>
    <string name="alerts_empty_list_message">No alerts are available for viewing.  Try selecting some alerts of interest in the configure pane.</string>
    <string name="das_real_time_chart_title">DAS Real Time Chart</string>
    <string name="action_command_title">Listening</string>
    <string name="speech_to_text_not_supported">This device does not support speech to text.</string>
    <string name="listening_title">Listening</string>
    <string name="speech_listening_text">"Listening   "</string>
    <string name="speech_to_text_error">Sorry I didn\'t catch that.</string>
    <string name="speech_to_text_can_not_find">Sorry I couldn\'t find that!</string>
    <string name="no_realtime_data_to_plot">There is no real time data to chart!</string>
    <string-array name="speech_to_text_report_preamble_array">
        <item>show me report</item>
        <item>show me the report</item>
        <item>open report</item>
        <item>open the report</item>
    </string-array>
    <string-array name="speech_to_text_alert_preamble_array">
        <item>show me alert</item>
        <item>show me the alert</item>
        <item>open alert</item>
        <item>open the alert</item>
    </string-array>
</resources>
