<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gov.va.shamu.android.ShamuConfigurationFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <LinearLayout android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px" >
            <requestFocus />
        </LinearLayout>    <TextView
        android:id="@+id/preferences_url_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences_url"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuration_url_preamble"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/preferences_url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/configuration_url_default" >
            </EditText>
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/preferences_polling_label_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configuration_polling_interval"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/preferences_polling_interval_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/preferences_test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/configuration_test_button" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/preferences_interesting_alert_note_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuration_interesting_alert_note"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/preferences_select_all_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_select_all_button_text" />

            <Button
                android:id="@+id/preferences_deselect_all_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferences_deselect_all_button_text"/>
        </TableRow>


        <ListView
            android:id="@+id/preferences_interesting_alert_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

</FrameLayout>
