<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/job_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/job_description_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1" >

    <TextView
        android:id="@+id/job_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="top|left"
        android:scrollbars="vertical|horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray_text" >
    </TextView>
</ScrollView>
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/last_completed_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/last_completed_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/last_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_text" />

            <TextView>
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/elapsed_time_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/elapsed_time_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/elapsed_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_text" />

            <TextView>
            </TextView>
        </TableRow>
    </TableLayout>

</LinearLayout>