<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gov.va.shamu.android.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/settings_layout_vibrate_chkbox"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin">

                <CheckBox
                    android:id="@+id/settings_vibrate_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_vibrate_checkbox" />
            </LinearLayout>
            </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                    android:id="@+id/settings_layout_audible_chkbox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin">

                    <CheckBox
                        android:id="@+id/settings_audible_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_audible_checkbox" />
                </LinearLayout>
            </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                    android:id="@+id/settings_layout_announce_chkbox"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin">

                    <CheckBox
                        android:id="@+id/settings_announce_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/settings_announce_checkbox" />
                </LinearLayout>
        </TableRow>
    </TableLayout>
</FrameLayout>
